welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: x is already defined as variable x
var x:Int=0
    ^ColumnByColumn:8: error: not found: value ecritmessage
	while(!estFaceMur()){ avance(); x=x+1; ecritmessage() 
                                               ^