welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
var x:Int=0
var x:Int=0
getMondeHauteur()
getMondeLargeur()

for ( i<-0 to getMondeHauteur()-1) { 
	while(!estFaceMur()){ avance(); x=x+1; ecritmessage() 
	{setpos(0, y=y+1)}
	}	
}



}
